[metadata]
name = youtube-history-explorer
version = 0.0.1
author = Max Crone
author_email = dev@maxcrone.org
description = Utilities to explore your personal YouTube watch history
license = MIT License
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vogeltak/youtube-history-explorer

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
